<resources>
    <string name="app_name">Number System</string>
    <string name="app_name1">Number System Convert</string>
    <string name="binary">Bin</string>
    <string name="decimal">Dec</string>
    <string name="octal">Oct</string>
    <string name="hexadecimal">Hex</string>
    <string name="enter_id">Enter a value</string>
    <string name="str_btn_convert">Convert</string>
    <string name="str_btn_clear">Clear</string>
    <string name="developer">Developed by: Panthil</string>
</resources>