<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_text"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/bin_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dialog_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_bin"
                style="@style/text_theme"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/binary"
                android:textColor="@color/primary_light"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txt_binary"
                    style="@style/text_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/primary_light"
                    android:textColorHint="@color/primary_light"
                    android:digits="01"
                    android:ems="13"
                    android:hint="@string/enter_id"
                    android:inputType="number"
                    android:textSize="16dp" />
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Dec_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dialog_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bin_id">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_dec"
                style="@style/text_theme"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/decimal"
                android:textColor="@color/primary_light"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txt_decimal"
                    style="@style/text_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:ems="13"
                    android:hint="@string/enter_id"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/primary_light"
                    android:textColorHint="@color/primary_light"
                    android:textSize="16dp" />
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Oct_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dialog_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dec_id">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_oct"
                style="@style/text_theme"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/octal"
                android:textColor="@color/primary_light"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txt_octal"
                    style="@style/text_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="01234567"
                    android:ems="13"
                    android:hint="@string/enter_id"
                    android:inputType="number"
                    android:textColor="@color/primary_light"
                    android:textColorHint="@color/primary_light"
                    android:textSize="16dp" />
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Hex_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dialog_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Oct_id">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_hex"
                style="@style/text_theme"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/hexadecimal"
                android:textColor="@color/primary_light"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txt_hexadecimal"
                    style="@style/text_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="0123456789ABCDEF"
                    android:ems="13"
                    android:hint="@string/enter_id"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/primary_light"
                    android:textColorHint="@color/primary_light"
                    android:textSize="16dp" />
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_Convert"
        style="@style/text_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/dialog_bg"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/str_btn_convert"
        android:textColor="@color/primary_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_Clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hex_id" />

    <Button
        android:id="@+id/btn_Clear"
        style="@style/text_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/dialog_bg"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/str_btn_clear"
        android:textColor="@color/primary_light"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Convert"
        app:layout_constraintTop_toBottomOf="@+id/Hex_id" />

</androidx.constraintlayout.widget.ConstraintLayout>
